# CotVis

./: .gitignore  .gitmessage.txt  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
betalab/: README.md
betalab/codexapp_server_bridge/: README.md  bridge.py  interactive_runner.mjs  launch_terminal_codex.py  package-lock.json  package.json  pexpect_cli_driver.py  runner.mjs  terminal_broadcast_manager.py
docs/: editing_identity_strategy.md  mvp_stream_asr_wordcloud_codex_prompt.md  mvp_stream_asr_wordcloud_spec.md  navigation_and_jump_strategy.md  voice_review_cli_development_plan.md
docs/issues/: bluetooth_headset_mic_followup.md
examples/: research_article_sample.md  sample_script.txt  sample_script_zh.txt
legacy/: README.md
scripts/: test_llm_terms.py
src/codex_speak/: cli.py
src/realtime_asr/: __init__.py  cli.py  codex_broadcast.py  events.py  simulate_transcript.py
src/realtime_asr/asr_backend/: __init__.py  base.py  mac_speech.py
src/realtime_asr/context/: __init__.py  concept_registry.py  concept_tracker.py  lane_assigner.py  manager.py  tokenizer.py
src/realtime_asr/document/: __init__.py  loader.py  locator.py  markdown.py  models.py
src/realtime_asr/lm/: __init__.py  llm_reranker.py  scorer.py
src/realtime_asr/patching/: __init__.py  applier.py  exporter.py  planner.py  save.py
src/realtime_asr/review/: __init__.py  analyze.py  constraints.py  engine.py  models.py  rewrite.py
src/realtime_asr/runtime/: __init__.py  navigator.py  session.py  state_machine.py
src/realtime_asr/util/: time.py
src/realtime_asr/voice/: __init__.py  asr.py  commands.py  tts.py  turn_control.py
src/realtime_asr/web/: __init__.py  canvas_builder.py  layout.py  server.py
src/realtime_asr/web/static/: canvas.html  wordcloud.html  wordcloud_v1_baseline.html  wordcloud_v2_refined.html
tests/: test_canvas_builder.py  test_command_router.py  test_concept_tracker.py  test_context_manager.py  test_lane_assigner.py  test_locator.py  test_markdown_loader.py  test_patch_applier.py  test_reading_runtime.py  test_review_constraints.py  test_review_loop.py  test_state_machine.py  test_terminal_broadcast_manager.py  test_voice_input_loop.py  test_wordcloud_layout_bounds.py
