[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-asr"
version = "0.1.0"
description = "MVP macOS streaming ASR with context-managed top terms output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyobjc-core>=10.0; platform_system == 'Darwin'",
  "pyobjc-framework-Speech>=10.0; platform_system == 'Darwin'",
  "pyobjc-framework-AVFoundation>=10.0; platform_system == 'Darwin'",
  "wordfreq>=3.1.1"
]

[project.scripts]
realtime-asr = "realtime_asr.cli:main"

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.2.90"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
realtime_asr = ["web/static/*.html"]
