[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-asr"
version = "0.1.0"
description = "Voice-first manuscript review CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "opencc-python-reimplemented>=0.1.7",
    "numpy>=1.26",
]

[project.scripts]
realtime-asr = "realtime_asr.cli:main"
codex-speak = "realtime_asr.codex_broadcast:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mic = ["sounddevice>=0.4"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
